<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <org.fossify.commons.views.MyTextView
        android:id="@+id/status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_margin"
        android:gravity="center"
        android:text="@string/no_recording"
        android:textSize="@dimen/bigger_text_size" />

    <org.fossify.commons.views.MyTextView
        android:id="@+id/timer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_margin"
        android:gravity="center"
        android:text="00:00"
        android:textSize="@dimen/extra_big_text_size"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <org.fossify.commons.views.MyTextView
            android:id="@+id/record_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_weight="1"
            android:background="@drawable/button_background_rounded"
            android:gravity="center"
            android:padding="@dimen/normal_margin"
            android:text="@string/start_recording"
            android:textSize="@dimen/bigger_text_size" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/play_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:layout_weight="1"
            android:background="@drawable/button_background_rounded"
            android:gravity="center"
            android:padding="@dimen/normal_margin"
            android:text="@string/play"
            android:textSize="@dimen/bigger_text_size"
            android:visibility="gone" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_weight="1"
            android:background="@drawable/button_background_rounded"
            android:gravity="center"
            android:padding="@dimen/normal_margin"
            android:text="@string/delete_recording"
            android:textSize="@dimen/bigger_text_size"
            android:visibility="gone" />

    </LinearLayout>

    <org.fossify.commons.views.MyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:gravity="center"
        android:text="@string/record_hold_notification_summary"
        android:textSize="@dimen/normal_text_size"
        android:alpha="0.7" />

</LinearLayout>
